Updating types